KULRICE-2756: Paths in Rice need to use configuration variables for URLs where appropriate https://test.kuali.org/jira/browse/KULRICE-2756
Using config params to build full paths instead of using ../